syntax = "proto3";

package Base;


message Vote
{
	optional string plugin = 1;
	string clientName = 2;
}
message TimeSync
{
	float remainingTime = 1;
}

message SyncData
{
	repeated Vote votes = 1;
	float remainingTime = 2;
}