syntax = "proto3";

package Uno;


message Player
{
	string name = 1;
	uint32 id = 2;
	repeated uint32 cardsOnHand = 3;
}

message GameState
{
	string playerInTurn = 1;
	repeated Player players = 2;
	uint32 topCard = 3;
	uint32 topCardColorID = 4;
	uint32 state = 5;
	bool choosingColor = 6;
}

message SinglePullCardResponse
{
	uint32 playerID = 1;
	repeated uint32 cards = 2;
}

message PullCardResponse
{
	repeated SinglePullCardResponse pullResponses = 1;
}
message PlayCardRequest
{
	uint32 card = 1;
}
message PlayCard
{
	uint32 playerID = 1;
	uint32 nextPlayerID = 2;
	uint32 card = 3;
}
message ChooseColorRequest
{
	uint32 colorID = 1;
}
message ChooseColor
{
	uint32 playerID = 1;
	uint32 nextPlayerID = 2;
	uint32 colorID = 3;
}